--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#noticias">Noticias</a></li>
                 <li><a href="#sobremim">Sobre Mim</a></li>
-                <li><a href="">Login</a></li>
-                <li><a href="">Cadastro</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="cadastro.html">Cadastro</a></li>
             </ul>
         </div>
     </div>
