--- a/index.html
+++ b/index.html
@@ -6,20 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SwiftSpace</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,700;1,300&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <div class="header">
         <div class="container">
-            <h1 class="titulo">SwiftSpace</h1>
+            <h1 class="titulo"><a href="index.html">SwiftSpace</a></h1>
             <ul class="navbar">
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#noticias">Noticias</a></li>
                 <li><a href="#sobremim">Sobre Mim</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="cadastro.html">Cadastro</a></li>
+                <li class="entrar"><a href="login.html">Entrar</a></li>
             </ul>
+        </div>
+        <div class="banner">
+            <div class="texto">
+                <span>Conheça</span><span>Taylor Swift:</span><span>O Fênomeno Mundial</span>
+            </div>
         </div>
     </div>
 
