--- a/login.html
+++ b/login.html
@@ -9,13 +9,12 @@
 <body>
   <div class="header">
     <div class="container">
-        <h1 class="titulo">SwiftSpace</h1>
+        <h1 class="titulo"><a href="index.html">SwiftSpace</a></h1>
         <ul class="navbar">
             <li><a href="#inicio">Inicio</a></li>
             <li><a href="#noticias">Noticias</a></li>
             <li><a href="#sobremim">Sobre Mim</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="cadastro.html">Cadastro</a></li>
+            <li class="entrar"><a href="login.html">Entrar</a></li>
         </ul>
     </div>
     
