--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="#noticias">Noticias</a></li>
                 <li><a href="#sobremim">Sobre Mim</a></li>
-                <li class="entrar"><a href="logincadastro.html">Entrar</a></li>
+                <li class="entrar"><a href="login.html">Entrar</a></li>
             </ul>
         </div>
         <div class="banner">
