html e css quiz criados

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <script src="./js/sessao.js"></script>
 </head>
 
-<body>
+<bodyw>
 
     <div class="header">
         <div class="container">
@@ -33,7 +33,7 @@
             </div>
             <div class="quizbox">
                 <div class="texto1">
-                    Teste seus conhecimentos sobre as músicas e a vida da cantora
+                    Teste seus conhecimentos sobre as músicas e a vida da cantora!
                 </div>
                 <a href="quiz.html" class="button">Fazer Quiz</a>
             </div>
@@ -52,6 +52,6 @@
 
     </div>
 
-</body>
+</bodyw>
 
 </html>
