--- a/public/quiz.html
+++ b/public/quiz.html
@@ -13,17 +13,21 @@
 
         <div class="quiz">
             <div class="ranking"></div>
-            <div class="game iniciar" id="iniciar"></div>
+            <div class="game iniciar" id="iniciar">
+                <div class="titulo">Quiz de conhecimentos sobre a vida e as músicas de Taylor Swift</div>
+                <button onclick="mostrarPergunta()">JOGAR</button>
+                <div class="pontuacao" id="div_pontos"></div>
+            </div>
             <div class="game" id="perguntas">
-                <div class="number"><span id="numero_pergunta">1.</span><span id="dificuldade_pergunta">Dificuldade: </span></div>
-                <div class="question">AAAAAAAAAAAAAAAAAAAA</div>
+                <div class="number"><span id="numero_pergunta"></span><di id="dificuldade_pergunta"></di></div>
+                <div class="question" id="div_pergunta"></div>
                 <div class="alternatives">
-                    <div class="botao" id="alt1">Um</div>
-                    <div class="botao" id="alt2"></div>
-                    <div class="botao" id="alt3"></div>
-                    <div class="botao" id="alt4"></div>
+                    <div class="botao" id="alt1" onclick="verificar(0)"></div>
+                    <div class="botao" id="alt2" onclick="verificar(1)"></div>
+                    <div class="botao" id="alt3" onclick="verificar(2)"></div>
+                    <div class="botao" id="alt4" onclick="verificar(3)"></div>
                 </div>
-                <div class="msg">Resposta Correta</div>
+                <div class="msg" id="div_msg"></div>
             </div>
             <div class="graph"></div>
         </div>
