quiz com feedback visual das alternativas

--- a/public/quiz.html
+++ b/public/quiz.html
@@ -15,7 +15,7 @@
             <div class="ranking"></div>
             <div class="game iniciar" id="iniciar">
                 <div class="titulo">Quiz de conhecimentos sobre a vida e as músicas de Taylor Swift</div>
-                <button onclick="mostrarPergunta()">JOGAR</button>
+                <button onclick="mostrarPergunta()" id="botao_iniciar">JOGAR</button>
                 <div class="pontuacao" id="div_pontos"></div>
             </div>
             <div class="game" id="perguntas">
@@ -27,7 +27,6 @@
                     <div class="botao" id="alt3" onclick="verificar(2)"></div>
                     <div class="botao" id="alt4" onclick="verificar(3)"></div>
                 </div>
-                <div class="msg" id="div_msg"></div>
             </div>
             <div class="graph"></div>
         </div>
