--- a/public/quiz.html
+++ b/public/quiz.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/quiz.css">
     <script src="js/quiz.js"></script>
 </head>
-<body>
+<body onload="validarSessao()">
     <div class="box">
         <a href="index.html"><div class="sair"><img src="assets/icons/voltar.png" class="imgsair"> Sair</div></a>
 
