--- a/public/quizMusicas.html
+++ b/public/quizMusicas.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link rel="stylesheet" href="css/quiz.css">
-    <script src="js/quiz.js"></script>
+    <script src="js/quizMusicas.js"></script>
 </head>
 <body onload="validarSessao()">
     <div class="box">
