--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
                 <div class="texto1">
                     Teste seus conhecimentos sobre as músicas e a vida da cantora!
                 </div>
-                <a href="quiz.html" class="button">Fazer Quiz</a>
+                <a href="dashboard.html" class="button">Fazer Quiz</a>
             </div>
         </div>
     </div>
