--- a/public/quizMusicas.html
+++ b/public/quizMusicas.html
@@ -167,7 +167,7 @@
             pontos: pontos,
         };
 
-        enviarDadosQuiz(resultadosQuiz);
+        enviarResultados(resultadosQuiz);
 
         iniciar.style.display = "flex";
         perguntas.style.display = "none";
@@ -183,7 +183,7 @@
         embaralhar();
     }
 
-    function enviarDadosQuiz(resultadosQuiz) {
+    function enviarResultados(resultadosQuiz) {
         console.log('Enviando dados do quiz:', resultadosQuiz); 
 
         fetch('/quiz/registrarTentativa', {
