alteração css side-nav dashboard e quiz

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -27,7 +27,7 @@
             </div>
 
             <div class="list-btns">
-                <div class="btn-nav inicio">
+                <div class="btn-nav inicio active-page">
                     <h3>Início</h3>
                 </div>
     
