--- a/public/quizLyrics.html
+++ b/public/quizLyrics.html
@@ -20,7 +20,9 @@
 
             <div class="list-btns">
                 <div class="btn-nav inicio">
-                    <h3>Início</h3>
+                    <a href="dashboard.html">
+                        <h3>Início</h3>
+                    </a>
                 </div>
     
                 <div class="texto">
@@ -33,7 +35,7 @@
                     </a>
                 </div>
     
-                <div class="btn-nav">
+                <div class="btn-nav active-page">
                     <a href="quizLyrics.html">
                         <h3>As letras de Taylor Swift</h3>
                     </a>
