--- a/public/quizMusicas.html
+++ b/public/quizMusicas.html
@@ -21,7 +21,9 @@
 
             <div class="list-btns">
                 <div class="btn-nav inicio">
-                    <h3>Início</h3>
+                    <a href="dashboard.html">
+                        <h3>Início</h3>
+                    </a>
                 </div>
     
                 <div class="texto">
@@ -40,7 +42,7 @@
                     </a>
                 </div>
     
-                <div class="btn-nav">
+                <div class="btn-nav active-page">
                     <a href="quizMusicas.html">
                         <h3>As Músicas e Álbuns de Taylor Swift</h3>
                     </a>
