--- a/public/quizVida.html
+++ b/public/quizVida.html
@@ -20,14 +20,16 @@
 
             <div class="list-btns">
                 <div class="btn-nav inicio">
-                    <h3>Início</h3>
+                    <a href="dashboard.html">
+                        <h3>Início</h3>
+                    </a>
                 </div>
     
                 <div class="texto">
                     <h3>Teste seus conhecimentos sobre:</h3>
                 </div>
                 
-                <div class="btn-nav">
+                <div class="btn-nav active-page">
                     <a href="quizVida.html">
                         <h3>A Vida Pessoal de Taylor Swift</h3>
                     </a>
