adicionada a função pra coletar tentativas do usuario e inserir corretamente no bacno

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -8,6 +8,7 @@
     <title>SwiftSpace | Dashboard</title>
 
     <link rel="stylesheet" href="css/dashboards.css">
+    <link rel="stylesheet" href="css/quizMusicas.css">
     <script src="js/sessao.js"></script>
 
     <!-- scripts do Chart.js - 2022-1 -->
