--- a/public/quizLyrics.html
+++ b/public/quizLyrics.html
@@ -7,6 +7,7 @@
     <title>Quiz</title>
     <link rel="stylesheet" href="css/quizLyrics.css">
     <link rel="stylesheet" href="css/dashboards.css">
+    <script src="js/sessao.js"></script>
 </head>
 
 <body onload="validarSessao()" class="quiz2">
@@ -62,7 +63,7 @@
             <div class="quiz">
                 <div class="ranking"></div>
                 <div class="game iniciar" id="iniciar">
-                    <div class="titulo">Quiz de conhecimentos sobre a vida e as músicas de Taylor Swift</div>
+                    <div class="titulo">Quiz de conhecimentos sobre as letras de Taylor Swift</div>
                     <button onclick="mostrarPergunta()" id="botao_iniciar">JOGAR</button>
                     <div class="pontuacao" id="div_pontos"></div>
                 </div>
@@ -112,9 +113,6 @@
             alternativas: ["Groceries", "Bag", "Things", "Stuff"],
             resposta: 0,
             dificuldade: "Difícil"
-        },
-        {
-            pergunta: ""
         }
     ];
 
@@ -122,6 +120,20 @@
     var pontos = 0;
     var idUsuario = sessionStorage.ID_USUARIO;
     var idQuiz = 2;
+    var idTentativa = 0;
+
+    function contarTentativas() {
+        fetch(`/quiz/contarTentativas/${idUsuario}/${idQuiz}`) 
+        .then(resposta => resposta.json())
+            .then(data => {
+                console.log(data)
+               idTentativa = data.tentativas;
+            })
+            .catch(error => {
+                console.error('Erro ao verificar tentativas:', error);
+            });
+        console.log(idTentativa);
+    }
 
     function embaralhar() {
         for (var index = perguntas_quiz.length - 1; index > 0; index--) {
@@ -167,14 +179,20 @@
                 corretaElement.classList.remove('correto');
                 mostrarPergunta();
             } else {
+                selectedElement.classList.remove('correto');
+                selectedElement.classList.remove('errado');
+                corretaElement.classList.remove('correto');
                 finalizarQuiz();
             }
         }, 500);
     }
 
     function finalizarQuiz() {
+        contarTentativas();
+
 
         var resultadosQuiz = {
+            idTentativa: idTentativa,
             idUsuario: idUsuario,
             idQuiz: idQuiz,
             pontos: pontos,
@@ -198,6 +216,8 @@
 
     function enviarResultados(resultadosQuiz) {
         console.log('Enviando dados do quiz:', resultadosQuiz); 
+
+        console.log(resultadosQuiz)
 
         fetch('/quiz/registrarTentativa', {
             method: 'POST',
