ajustes de ortografia

--- a/public/quizMusicas.html
+++ b/public/quizMusicas.html
@@ -57,7 +57,7 @@
      
         <div class="box">
             <a href="dashboard.html">
-                <div class="sair"><img src="assets/icons/voltar.png" class="imgsair"> Sair</div>
+                <div class="sair"><img src="assets/icons/voltar.png" class="imgsair"> Voltar</div>
             </a>
             
             <div class="quiz">
